v2/Web-App/farm-designer.md
---
title: "Farm Designer"
slug: "farm-designer"
description: "Drag-and-drop plant placement [my.farmbot.io/app/designer](http://my.farmbot.io/app/designer)"
---

* toc
{:toc}

View and layout your garden in a virtual representation of your FarmBot's bed on this page.

<div class="nav-image">
  <img class="nav-image" src="_images/sprouts.png" alt="Farm Designer" />
  <a href="https://software.farmbot.io/docs/farm-designer#add-plants" style="top: 8%; left: 0%; width: 21.5%; height: 91%;"></a>
  <a href="https://software.farmbot.io/docs/farm-designer#map" style="top: 8%; left: 21.5%; width: 78%; height: 91%;"></a>
</div>
<figcaption class="caption">Click a section in the image to learn more about it!</figcaption>



# Add Plants

Add plants for your FarmBot to grow by pressing the `+` button and searching for a crop.

![add.png](_images/add.png)



![tomato.png](_images/tomato.png)

Find the crop that you'd like in your garden and click it to bring up the crop information.

![cherry_tomato.png](_images/cherry_tomato.png)

Drag the crop image into the [map](#map) to place the crop in your garden.

![tomato_drag.png](_images/tomato_drag.png)

You now have a plant!

![new_tomato.png](_images/new_tomato.png)



# Remove a plant

If you'd like to delete a plant, click on it to bring up the plant information and press the `EDIT` button.

![edit.png](_images/edit.png)

Press the `DELETE` button to remove the plant.

![editing.png](_images/editing.png)



# Map

You can view all of your plants in the map, a virtual representation of the FarmBot bed. You can drag plants around to rearrange them.

![dc5db8f-map.png](_images/map.png)


# What's next?

 * [Farm Events](../Web-App/farm-events.md)
