v4/Web-App/farm-designer.md
---
title: "Farm Designer"
slug: "farm-designer"
description: "Drag-and-drop plant placement [my.farmbot.io/app/designer](http://my.farmbot.io/app/designer)"
---

* toc
{:toc}

View and layout your garden in a virtual representation of your FarmBot's bed on this page.

<div class="nav-image">
  <img class="nav-image" src="_images/overview_02.png" alt="Farm Designer" />
  <a href="https://software.farmbot.io/docs/farm-designer#add-plants" style="top: 12%; left: 0%; width: 30.75%; height: 87%;"></a>
  <a href="https://software.farmbot.io/docs/farm-designer#map" style="top: 12%; left: 30.75%; width: 68.5%; height: 87%;"></a>
</div>
<figcaption class="caption">Click a section in the image to learn more about it!</figcaption>



# Add Plants

Add plants for your FarmBot to grow by pressing the <span class="fb-circle-button fb-green">+</span> button and searching for a crop.

![add.png](_images/add.png)



![tomato.png](_images/tomato.png)

Find the crop that you'd like in your garden and click it to bring up the crop information.

![cherry_tomato.png](_images/cherry_tomato.png)

Drag the crop image into the [map](#map) to place the crop in your garden.

![tomato_drag.png](_images/tomato_drag.png)

You now have a plant!

![new_tomato.png](_images/new_tomato.png)



# Move a plant

To move a plant, simply drag the plant to a new location in the [map](#map).

# Remove a plant

If you'd like to delete a plant, click on it to bring up the plant information and press the `EDIT` button.

![edit.png](_images/edit.png)

Press the <span class="fb-button fb-red">DELETE</span> button to remove the plant.

![editing.png](_images/editing.png)



# Map

You can view all of your plants in the map, a virtual representation of the FarmBot bed. You can drag plants around to rearrange them by clicking on the plant and pressing `EDIT` in the plants panel.

![overview.png](_images/overview.png)

You can open the map display options menu by pressing the white arrow icon in the upper right.

![menu.png](_images/menu.png)

**Menu options include:**
* Zoom (+/-)
* Plant toggle (enable/disable display of plant icons)
* Point toggle (enable/disable display of points (weeds, etc)
* Spread toggle (enable/disable display of plant spread indicators)
* FarmBot toggle (enable/disable display of tools and the virtual FarmBot)
* Origin selector (click on one of the four quadrants to adjust the map to your viewing angle)

![spread.png](_images/spread.png)


# What's next?

 * [Farm Events](../Web-App/farm-events.md)
